--- a/crates/endpoint/service/Cargo.toml
+++ b/crates/endpoint/service/Cargo.toml
@@ -8,6 +8,7 @@ description = "The Valence co-processor service application."
 [dependencies]
 anyhow.workspace = true
 clap.workspace = true
+const-hex.workspace = true
 dirs = "6.0.0"
 flume = "0.11.1"
 hex.workspace = true
@@ -15,6 +16,7 @@ serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
 toml = "0.8.20"
+valence-crypto-utils = { workspace = true, default-features = true }
 valence-coprocessor.path = "../../core"
 valence-coprocessor-prover.path = "../prover"
 valence-coprocessor-redis.path = "../../data/redis"
