--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ default-members = ["crates/core", "crates/merkle", "crates/types"]
 authors = ["Timewave Labs"]
 edition = "2021"
 license = "Apache-2.0"
-version = "0.4.8"
+version = "0.4.9"
 repository = "https://github.com/timewave-computer/valence-coprocessor"
 
 [workspace.dependencies]
@@ -40,6 +40,7 @@ msgpacker = { version = "0.4.8", default-features = false, features = [
   "alloc",
   "derive",
 ] }
+parking_lot = "0.12.4"
 proptest = "1.6.0"
 rand = "0.9.2"
 reqwest = { version = "0.12.15", features = ["blocking", "json"] }
