--- a/crates/endpoint/prover/Cargo.toml
+++ b/crates/endpoint/prover/Cargo.toml
@@ -10,9 +10,11 @@ anyhow.workspace = true
 bincode.workspace = true
 clap.workspace = true
 flume = "0.11.1"
+hashbrown.workspace = true
 hex.workspace = true
 lru.workspace = true
 msgpacker = { workspace = true, default-features = true }
+parking_lot = "0.12.4"
 rand = "0.9.1"
 serde.workspace = true
 serde_cbor.workspace = true
